--- a/public/css/style.css
+++ b/public/css/style.css
@@ -184,25 +184,16 @@ section
 /*********************************
 3. Home
 *********************************/
-
-#home
+.home
 {
 	width: 100vw;
 	height: 100vh;
 	overflow: hidden;
 }
-#home::after
+.home-separator
 {
-	display: none;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	pointer-events: none;
-	background: rgba(255, 255, 255, 0.7);
-	content: '';
-	z-index: 500;
+	padding-bottom: 40px;
+	background: #1e1f45;
 }
 
 /*********************************
@@ -211,8 +202,8 @@ section
 
 .slider_container
 {
-	width: 100vw;
-	height: 100vh;
+	width: 100!important;
+	height: 500px;
 }
 #hero_slider
 {
@@ -377,7 +368,7 @@ section
 	width: 100%;
 	height: 100px;
 	background: transparent;
-	z-index: 10002;
+	z-index: 1002;
 	-webkit-transition: all 400ms ease;
 	-moz-transition: all 400ms ease;
 	-ms-transition: all 400ms ease;
