--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@
 1. Fonts
 ***********/
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800|Playfair+Display:400,400i,700,900|Raleway:300,300i,400,400i,500,600,700,800,900');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,800');
 
 /*********************************
 2. Body and some general stuff
@@ -22,7 +22,7 @@ html, body{
 body
 {
 	font-size: 16px;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	background: #F7F7F7;
 	color: #313131;
 }
@@ -47,7 +47,7 @@ a, a:hover, a:visited, a:active, a:link
 }
 p
 {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 16px;
 	line-height: 1.7;
 	font-weight: 400;
@@ -202,8 +202,7 @@ section
 
 .slider_container
 {
-	width: 100!important;
-	height: 500px;
+	height: 550px;
 }
 #hero_slider
 {
@@ -235,12 +234,11 @@ section
 .main_slider_nav
 {
 	position: absolute;
-	top: 50%;
-	left: calc(65% - 135px);
+	top: 95%;
+	left: 48%;
 	width: 70px;
 	height: 70px;
 	background: transparent;
-	border: solid 2px rgba(0, 0, 0, 0.1);
 	z-index: 1000;
 	-ms-transform: translateY(-50%) rotate(135deg);
     -webkit-transform: translateY(-50%) rotate(135deg);
@@ -248,6 +246,7 @@ section
     -o-transform: translateY(-50%) rotate(135deg);
     transform: translateY(-50%) rotate(135deg);
     transform-origin: center;
+    color:#0d0050;
 }
 .main_slider_nav_inner
 {
@@ -259,7 +258,7 @@ section
     -o-transform: rotate(-135deg);
     transform: rotate(-135deg);
     transform-origin: center;
-    font-family: 'Open Sans';
+    font-family: 'Montserrat';
     text-transform: uppercase;
     font-weight: 900;
     font-size: 12px;
@@ -448,15 +447,17 @@ section
 {
 	display: block;
 	position: relative;
-	width: 50%;
-	font-family: 'Playfair Display', serif;
-	font-weight: 700;
+	width: 70%;
+	font-family: 'Montserrat', serif;
+	font-weight: 900;
 	color: #313131;
 	line-height: 1.2;
 	margin-top: -15px;
 	color:#fff;
-	left:50%;
-	font-size: 2em;
+	left:30%;
+	font-size: 1.5em;
+	line-height: 220%;
+	text-transform: uppercase;
 }
 .home_content p
 {
@@ -515,6 +516,27 @@ section
 	background: #313131;
 	color: #FFFFFF;
 	border-color: #313131;
+}
+.button_uni
+{
+	display: inline-block;
+	padding-left: 40px;
+	padding-right: 40px;
+	border: solid 2px rgba(240, 82, 52, 1);
+	font-size: 13px;
+	font-weight: 900;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	color: #fff!important;;
+	background: #ea4728!important;
+	cursor: pointer;
+	background: transparent;
+	text-align:center;
+}
+.button_uni:hover
+{
+	background: #ff684b!important;
+	color: #fff!important;
 }
 .button_line
 {
@@ -706,19 +728,19 @@ section
 }
 .slider_bg_1
 {
-	background-image: url(../img/university_1.jpg);
+	background-image: url(../img/slider/slider-bg.jpg);
 }
 .slider_bg_2
 {
-	background-image: url(../img/university_2.jpg);
+	background-image: url(../img/slider/slider-bg.jpg);
 }
 .slider_bg_3
 {
-	background-image: url(../img/university_3.jpg);
+	background-image: url(../img/slider/slider-bg.jpg);
 }
 .slider_bg_4
 {
-	background-image: url(../img/university_4.jpg);
+	background-image: url(../img/slider/slider-bg.jpg);
 }
 .slider_bg::after
 {
@@ -728,7 +750,6 @@ section
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: rgba(255, 255, 255, 0.4);
 	content: '';
 }
 
@@ -1114,7 +1135,7 @@ section
 }
 .section_title h1
 {
-	font-family: 'Playfair Display', serif;
+	font-family: 'Montserrat', serif;
 	margin-top: 0px;
 }
 .section_title p
@@ -1142,17 +1163,21 @@ section
 }
 .about_section_title
 {
+	text-transform: uppercase;
 	text-align: left;
-}
-.about_section_title h1
-{
-	font-family: 'Playfair Display', serif;
-	margin-top: 0px;
-	color:#fff;
 }
 .about_section_title h3
 {
-	font-family: 'Playfair Display', serif;
+	font-family: 'Montserrat', serif;
+	font-weight: 600;
+	margin-top: 0px;
+	line-height: 120%;
+	color:#fff;
+}
+.about_section_title h4
+{
+	font-family: 'Montserrat', serif;
+	font-size: 1.5em;
 	margin-top: 0px;
 	color:#000;
 }
@@ -1272,7 +1297,7 @@ section
 	display: inline-block;
 	position: relative;
 	color: #FFFFFF;
-	font-family: 'Playfair Display', serif;
+	font-family: 'Montserrat', serif;
 	margin-bottom: 55px;
 	margin-top: 0px;
 }
@@ -1322,6 +1347,32 @@ section
 	font-weight: 900;
 	text-transform: uppercase;
 	color: #f05234;
+	text-align:center;
+}
+.service_modal_header{
+	margin-top: 35px;
+	font-size: 1.8em;
+	font-weight: 900;
+	color: #fd431a;
+	text-transform: uppercase;
+	text-align:center;
+}
+
+.service_modal_header_left{
+	margin-top: 35px;
+	font-size: 1.8em;
+	font-weight: 900;
+	color: #fd431a;
+	text-transform: uppercase;
+	text-align:left;
+}
+.service_modal_text{
+	padding: 20px 60px;
+	font-size: 1em;
+	text-align: justify;
+}
+.service_modal_text p{
+	color: #0d0050;
 }
 
 @media (max-width:480px)  {
@@ -1397,7 +1448,7 @@ section
 }
 .about_extra h3
 {
-	font-family: 'Playfair Display', serif;
+	font-family: 'Montserrat', serif;
 	line-height: 1.3;
 }
 .about_extra p
@@ -1584,7 +1635,7 @@ Slider Content
 .slider_content h4
 {
 	position: relative;
-	font-family: 'Playfair Display', serif;
+	font-family: 'Montserrat', serif;
 	margin-bottom: 60px;
 	margin-top: 0px;
 }
@@ -1868,7 +1919,7 @@ Slider Content
 .features_text h4
 {
 	margin-top: 0px;
-	font-family: 'Playfaif Display', serif;
+	font-family: 'Montserrat', serif;
 	margin-bottom: 20px;
 	font-size: 26px;
 	line-height: 1.2;
@@ -2089,7 +2140,7 @@ Slider Content
 {
 	font-size: 20px;
 	line-height: 1.3;
-	font-family: 'Playfair Display', serif;
+	font-family: 'Montserrat', serif;
 }
 .step_text p
 {
@@ -2215,7 +2266,7 @@ Slider Content
 }
 .video_text h3
 {
-	font-family: 'Playfair Display', serif;
+	font-family: 'Montserrat', serif;
 	margin-bottom: 24px;
 	margin-top: 0px;
 }
@@ -2260,7 +2311,7 @@ Slider Content
 #call_to_action_1 h4 span
 {
 	display: inline;
-	font-family: 'Playfair Display', serif;
+	font-family: 'Montserrat', serif;
 	font-style: italic;
 }
 #call_to_action_1 p
@@ -2336,7 +2387,7 @@ Slider Content
 }
 .pricing_item h4
 {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	text-transform: uppercase;
 	font-weight: 500;
 	margin: 0px;
@@ -2348,7 +2399,7 @@ Slider Content
 }
 .pricing_item p
 {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-weight: 500;
 	font-size: 14px;
 	-webkit-transition: all 200ms ease;
@@ -2393,7 +2444,7 @@ Slider Content
 	padding-bottom: 10px;
 	margin-bottom: 11px;
 	border-bottom: solid 1px #dadada;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 14px;
 }
 .check_container
@@ -2686,7 +2737,7 @@ Slider Content
 }
 .from_blog_content_inner h4
 {
-	font-family: 'Playfair Display', serif;
+	font-family: 'Montserrat', serif;
 	line-height: 1.3;
 	margin-top: 0px;
 	margin-bottom: 6px;
@@ -2816,7 +2867,7 @@ Slider Content
 }
 .contact_container h2
 {
-	font-family: 'Playfair Display', serif;
+	font-family: 'Montserrat', serif;
 	line-height: 1;
 }
 .contact_container h2:first-child
@@ -3109,7 +3160,7 @@ input[type="email"], input[type="password"], input[type="text"]
 }
 .newsletter_ph::-webkit-input-placeholder
 {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 16px;
 	letter-spacing: 1.5px;
 	font-weight: 300;
@@ -3117,7 +3168,7 @@ input[type="email"], input[type="password"], input[type="text"]
 }
 .newsletter_ph:-moz-placeholder /* older Firefox*/
 {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 16px;
 	letter-spacing: 1.5px;
 	font-weight: 300;
@@ -3125,7 +3176,7 @@ input[type="email"], input[type="password"], input[type="text"]
 }
 .newsletter_ph::-moz-placeholder /* Firefox 19+ */ 
 {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 16px;
 	letter-spacing: 1.5px;
 	font-weight: 300;
@@ -3133,7 +3184,7 @@ input[type="email"], input[type="password"], input[type="text"]
 } 
 .newsletter_ph:-ms-input-placeholder
 { 
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 16px;
 	letter-spacing: 1.5px;
 	font-weight: 300;
@@ -3141,7 +3192,7 @@ input[type="email"], input[type="password"], input[type="text"]
 }
 .newsletter_ph::input-placeholder
 {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 16px;
 	letter-spacing: 1.5px;
 	font-weight: 300;
@@ -3186,6 +3237,40 @@ input[type="email"], input[type="password"], input[type="text"]
 /*********************************
 21. OVERSEAS
 *********************************/
+#overseas{
+	width: 100%;
+	padding-top: 60px;
+	padding-bottom: 60px;
+}
+
+.university-list{
+	padding-top: 20px;
+	line-height: 200%;
+	font-weight: 600;
+	cursor: pointer;
+	font-size: 1.2em;
+}
+
+.university-list a{
+	color: #1f1f45;
+}
+
+.university-list a:hover{
+	color: #337ab7;
+}
+.uni_modal_top{
+	font-size: 1em;
+	color: #1f1f45;
+	text-transform: uppercase;
+	margin-bottom: -10px;
+}
+.uni_modal_header{
+	font-size: 1.2em;
+	font-weight: 900;
+	color: #fd431a;
+	text-transform: uppercase;
+}
+
 .map-row{
 	padding-top:40px;
 }
@@ -3273,7 +3358,7 @@ input[type="email"], input[type="password"], input[type="text"]
     max-width: 240px;
     color: #fd4219;
     font-weight: 600;
-	font-family: Open Sans;
+	font-family: Montserrat;
     padding: 10px 15px;
     border-radius: 4px;
     -webkit-border-radius: 4px;
@@ -3710,7 +3795,7 @@ input[type="email"], input[type="password"], input[type="text"]
 	font-size: 12px;
 	color: #999;
 	font-weight: 400;
-	font-family: Open Sans;
+	font-family: Montserrat;
 }
 
 #accordion-career .panel-title {
