--- a/public/css/bootstrap/bootstrap.css
+++ b/public/css/bootstrap/bootstrap.css
@@ -5843,10 +5843,8 @@ button.list-group-item-danger.active:focus {
   font-size: 21px;
   font-weight: bold;
   line-height: 1;
-  color: #000;
+  color: #fd431a;;
   text-shadow: 0 1px 0 #fff;
-  filter: alpha(opacity=20);
-  opacity: .2;
 }
 .close:hover,
 .close:focus {
@@ -5932,8 +5930,7 @@ button.close {
   opacity: .5;
 }
 .modal-header {
-  padding: 15px;
-  border-bottom: 1px solid #e5e5e5;
+  padding: 15px 20px 0 0;
 }
 .modal-header .close {
   margin-top: -2px;
@@ -5949,7 +5946,6 @@ button.close {
 .modal-footer {
   padding: 15px;
   text-align: right;
-  border-top: 1px solid #e5e5e5;
 }
 .modal-footer .btn + .btn {
   margin-bottom: 0;
