--- a/public/css/style.css
+++ b/public/css/style.css
@@ -186,7 +186,6 @@ section
 .home
 {
 	width: 100vw;
-	height: 100vh;
 	overflow: hidden;
 }
 .home-separator
@@ -1387,7 +1386,8 @@ section
 	text-align: justify;
 }
 .service_modal_text p{
-	color: #0d0050;
+	font-size:1em;
+	color: #000;
 }
 
 @media (max-width:480px)  {
@@ -3294,7 +3294,18 @@ input[type="email"], input[type="password"], input[type="text"]
 	color: #fd431a;
 	text-transform: uppercase;
 }
-
+.uni_link{
+	margin-top:20px;
+	font-size:1.1em;
+	font-weight: 600;
+    text-align: center;
+}
+.uni_link a{
+	color: #fd431a!important;
+}
+.uni_link a:hover {
+	color: #337ab7!important;
+}
 .map-row{
 	padding-top:40px;
 }
@@ -3835,4 +3846,155 @@ input[type="email"], input[type="password"], input[type="text"]
 	position: absolute;
 	left: 26px;
 	font-size: 29px;
+}
+
+
+/*********************************
+22. WORK
+*********************************/
+
+#work
+{
+	width: 100%;
+	padding-top: 120px;
+}
+.work_nav_container
+{
+	padding-top: 120px;
+	padding-bottom: 136px;
+}
+.work_nav_container ul li
+{
+	position: relative;
+	display: inline-block;
+	margin-right: 60px;
+}
+.work_nav_container ul li:last-child
+{
+	margin-right: 0px;
+}
+.work_nav_container ul li a
+{
+	font-size: 36px;
+	font-weight: 400;
+	color: #717a85;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	-webkit-transition: all 200ms ease;
+	-moz-transition: all 200ms ease;
+	-ms-transition: all 200ms ease;
+	-o-transition: all 200ms ease;
+	transition: all 200ms ease;
+}
+.work_nav_container ul li a:hover
+{
+	color: #313131;
+}
+.work_nav_container ul li.active a
+{
+	color: #313131;
+}
+.work_nav_container ul li.active::after
+{
+	display: block;
+	position: absolute;
+	left: -5px;
+	bottom: 7px;
+	width: calc(100% + 10px);
+	height: 20px;
+	background: rgba(0, 187, 213, 0.2);
+	content: '';
+	z-index: -1;
+}
+.work_container
+{
+	padding-left: 0px;
+	padding-right: 0px;
+}
+.grid
+{
+	/*margin-top: 166px;*/
+	margin-bottom: 0px;
+}
+.grid-item a::after
+{
+	display: block;
+	position: absolute;
+	content: '';
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: rgba(0, 187, 213, 0.45);
+	opacity: 0;
+	-webkit-transition: opacity 500ms ease;
+	-moz-transition: opacity 500ms ease;
+	-ms-transition: opacity 500ms ease;
+	-o-transition: opacity 500ms ease;
+	transition: opacity 500ms ease;
+	cursor: pointer;
+}
+.grid-item a:hover::after
+{
+	opacity: 1;
+}
+.grid-item a:hover h4
+{
+	opacity: 1;
+}
+.grid-item
+{
+	width: 50%;
+	height: calc(50vw / 1.777777777777778);
+	overflow: hidden;
+}
+.grid-item a
+{
+	display: block !important;
+	width: 100%;
+	height: 100%;
+}
+.grid-item a span
+{
+	display: block;
+	width: 100%;
+	height: 100%;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+	-webkit-transition: all 2000ms ease;
+	-moz-transition: all 2000ms ease;
+	-ms-transition: all 2000ms ease;
+	-o-transition: all 2000ms ease;
+	transition: all 2000ms ease;
+}
+.grid-item a:hover span
+{
+	transform: scale(1.1);
+}
+.grid-item a h4
+{
+	display: block;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	-moz-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	-o-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	color: #FFFFFF;
+	text-align: center;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	opacity: 0;
+	-webkit-transition: all 700ms ease;
+	-moz-transition: all 700ms ease;
+	-ms-transition: all 700ms ease;
+	-o-transition: all 700ms ease;
+	transition: all 700ms ease;
+	z-index: 10;
+	font-family: 'Montserrat', serif;
+	font-weight: 900;
+	cursor: pointer;
 }
