--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -537,7 +537,7 @@
 	{
 		font-weight: 900;
 		font-size: 32px;
-		line-height: 36px;
+		line-height: 60px;
 		letter-spacing: 2px;
 	}
 	.home_social
@@ -974,7 +974,7 @@
 	{
 		font-weight: 900;
 		font-size: 24px;
-		line-height: 26px;
+		line-height: 40px;
 		letter-spacing: 2px;
 	}
 	.fs_menu_social
@@ -1039,9 +1039,13 @@
 	{
 		transform: translateY(5px) rotate(45deg);
 	}
+	.hamburger.active div:middle-child
+	{
+		transform: translateY(5px) rotate(45deg);
+	}
 	.hamburger.active div:last-child
 	{
-		transform: translateY(-5px) rotate(-45deg);
+		transform: translateY(-5px) rotate(45deg);
 	}
 	.hamburger div
 	{
@@ -1049,7 +1053,7 @@
 		left: 5px;
 		width: 20px;
 		height: 2px;
-		background: #313131;
+		background: #f05234;
 		-webkit-transition: all 200ms ease;
 		-moz-transition: all 200ms ease;
 		-ms-transition: all 200ms ease;
@@ -1060,6 +1064,10 @@
 	.hamburger div:first-child
 	{
 		top: 9px;
+	}
+	.hamburger div:middle-child
+	{
+		top: 12px;
 	}
 	.hamburger div:last-child
 	{
