--- a/public/css/bootstrap/bootstrap.css
+++ b/public/css/bootstrap/bootstrap.css
@@ -5876,6 +5876,11 @@ button.close {
   -webkit-overflow-scrolling: touch;
   outline: 0;
 }
+@media (max-width: 990px) {
+  .modal {
+    margin-top: 60px;
+  }
+}
 .modal.fade .modal-dialog {
   -webkit-transition: -webkit-transform .3s ease-out;
        -o-transition:      -o-transform .3s ease-out;
@@ -5911,6 +5916,7 @@ button.close {
   outline: 0;
   -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
           box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
+  z-index: 9000!important;
 }
 .modal-backdrop {
   position: fixed;
