--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -20,16 +20,6 @@
 
 ******************************/
 
-@media (max-width:900px)  {
-	#desktop-only
-	{
-		display:none;
-	}
-	#mobile-only
-	{
-		display: block;
-	}
-}
 @media (min-width:901px) {
 	#desktop-only
 	{
@@ -38,6 +28,17 @@
 	#mobile-only
 	{
 		display:none;
+	}
+}
+
+@media (max-width:900px)  {
+	#desktop-only
+	{
+		display:none;
+	}
+	#mobile-only
+	{
+		display: block;
 	}
 }
 
@@ -139,7 +140,7 @@
 		height: 150px;
 		margin-top: 5px;
 		border: none;
-		border-bottom: solid 2px #00bcd5;
+		border-bottom: solid 2px #f05234;
 		box-shadow: none;
 		border-radius: 0px;
 		padding-left: 0px;
@@ -232,10 +233,6 @@
 	.fs_menu_left.active
 	{
 		width: 280px;
-	}
-	.feature_card_content
-	{
-		margin-bottom: 30px;
 	}
 	.feature_cards_text
 	{
@@ -1540,7 +1537,7 @@
 		height: 100px;
 		margin-top: 5px;
 		border: none;
-		border-bottom: solid 2px #00bcd5;
+		border-bottom: solid 2px #f05234;
 		box-shadow: none;
 		border-radius: 0px;
 		padding-left: 0px;
